--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "cssnano": "^4.1.10",
     "postcss": "^8.1.10",
     "postcss-cli": "^8.3.0",
-    "tailwindcss": "^2.0.1"
+    "tailwindcss": "^2.0.1",
+    "tailwindcss-scroll-snap": "^1.0.3"
   },
   "scripts": {
     "tailwind": "npx tailwindcss-cli@latest build src/tailwind.css -o tailwind.css",
